Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73839

tst_QWebEnginePage crashes on exit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.12.2, 5.12.3, 5.13.0, 5.14.0 Alpha
    • 5.13.0 Alpha 1
    • WebEngine
    • None
    • Windows 10 MSVC 2017 64 Bit
    • Windows
    • 7537526093c92e89672d1e952a9baceecaa91730 (qt/qtwebengine/5.12)

    Description

      tst_QWebEnginePage crashes on exit, most likely due to a use-after-free when destroying the WebEngine profile, which in turn destroys the download items, which in turn try to access the private profile.

      Possibly introduced by 0deb1ffda77f0410b3d13419856c757cdd422d2b

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kiburtse Kirill Burtsev
            mibrunin Michael Bruning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes