Set download state to finished when cancelling or destroying the download item

Task-number: QTBUG-73839
Change-Id: Ieebaa802bdfe0c410618e4213a9bedbbae9d0f61
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>